<resources>
    <string name="app_name">Movie Maniac</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_summary">Movie Summary</string>
    <string name="movie_release_date">Release Date: %s</string>
    <string name="movie_rating">Ratings: %s star</string>
    <string name="movie_director">Director: %s</string>
</resources>